--- a/test/failing_test.deployment.yaml
+++ b/test/failing_test.deployment.yaml
@@ -1,27 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: hello-world
+  namespace: polaris
   labels:
-    app: nginx
+    app: hello
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: hello
   template:
     metadata:
       labels:
-        app: nginx
+        app: hello
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.7.9
+      - name: hello-world
+        image: hello-world
         ports:
         - containerPort: 80
         securityContext:
           allowPrivilegeEscalation: true
-          privileged: false 
+          privileged: false
           readOnlyRootFilesystem: true
           runAsNonRoot: true
           capabilities:
